Ver1.8.9 Fix responsible

--- a/html5/responsible/01/index.html
+++ b/html5/responsible/01/index.html
@@ -4,15 +4,15 @@
   <title>cosmos</title>
   <meta charset="utf-8"/>
   <link rel="stylesheet" href="normalize.css"/>
+  <link href='http://fonts.googleapis.com/css?family=Play' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css"/>
   <link rel="stylesheet" media="screen and (max-width: 480px)" href="small.css" />
   <link rel="stylesheet" media="screen and (max-width: 960px)" href="middle.css" />
-  <link rel="stylesheet" media="screen and (min-width: 1200px)" href="large.css" />
 </head>
 <body>
   <div id="contents">
     <div id="header">
-      <header class="mplus-1p-regular">cosmos</header>
+      <header class="mplus-1p-regular">COSMOS</header>
     </div>
 
     <div id="nav">
@@ -28,7 +28,16 @@
     </div>
 
     <div id="main">
-
+      <div class="left">
+        <p>
+          left
+        </p>
+      </div>
+      <div class="right">
+        <p>
+          right
+        </p>
+      </div>
     </div>
 
     <div id="footer">
