--- a/html5/responsible/01/index.html
+++ b/html5/responsible/01/index.html
@@ -5,43 +5,52 @@
   <meta charset="utf-8"/>
   <link rel="stylesheet" href="normalize.css"/>
   <link href='http://fonts.googleapis.com/css?family=Play' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css"/>
   <link rel="stylesheet" media="screen and (max-width: 480px)" href="small.css" />
   <link rel="stylesheet" media="screen and (max-width: 960px)" href="middle.css" />
 </head>
 <body>
-  <div id="contents">
-    <div id="header">
-      <header class="mplus-1p-regular">COSMOS</header>
-    </div>
-
-    <div id="nav">
-      <nav>
-        <ul class="flex">
-          <li><a href="#">MENU1</a></li>
-          <li><a href="#">MENU2</a></li>
-          <li><a href="#">MENU3</a></li>
-          <li><a href="#">MENU4</a></li>
-          <li><a href="#">MENU5</a></li>
-        </ul>
-      </nav>
-    </div>
-
-    <div id="main">
-      <div class="left">
-        <p>
-          left
-        </p>
+  <div id="base">
+    <div id="contents">
+      <div id="header">
+        <header class="mplus-1p-regular">COSMOS</header>
       </div>
-      <div class="right">
-        <p>
-          right
-        </p>
-      </div>
-    </div>
 
-    <div id="footer">
-      <footer>Copyright &copy; 2015 All Rights Reserved.</footer>
+      <div id="nav">
+        <nav>
+          <ul class="flex">
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">PICTURES</a></li>
+            <li><a href="#">MOVIES</a></li>
+            <li><a href="#">LINKS</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <div id="main">
+        <div class="title">
+          <div class="title_big">COSMOS</div>
+          <div class="title_sub">
+              complete earth <img src="svgs/earth38.svg" class="earth_img"/> complete earth
+          </div>
+        </div>
+        <div class="left">
+          <p>
+            left
+          </p>
+        </div>
+        <div class="right">
+          <p>
+            right
+          </p>
+        </div>
+      </div>
+
+      <div id="footer">
+        <footer>Copyright &copy; 2015 All Rights Reserved.</footer>
+      </div>
     </div>
   </div>
 </body>
