Ver1.9.1 Fix Design

--- a/html5/responsible/01/index.html
+++ b/html5/responsible/01/index.html
@@ -31,20 +31,100 @@
 
       <div id="main">
         <div class="title">
-          <div class="title_big">COSMOS</div>
+          <div class="title_big">
+            C<span class="title_style_big">O<span class="title_style_small">SM</span>O</span>S
+          </div>
+          <div class="title_img">
+            <img src="svgs/earth38.svg" class="earth_img"/>
+          </div>
           <div class="title_sub">
-              complete earth <img src="svgs/earth38.svg" class="earth_img"/> complete earth
+              complete earth, and complete earth ...
+          </div>
+          <div class="title_button">
+            <div class="button_style">
+              <a href="#" class="button_style_big">宇宙の真理を知る</a>
+            </div>
           </div>
         </div>
-        <div class="left">
-          <p>
-            left
-          </p>
-        </div>
-        <div class="right">
-          <p>
-            right
-          </p>
+        <div class="sub_contents">
+          <div class="contents">
+            <div class="content">
+              <p class="content_title">
+                MARCURY
+              </p>
+              <p>
+                <img src="svgs/galaxy3.svg" class="content_img"/>
+              </p>
+            </div>
+            <div class="content">
+              <p class="content_title">
+                VENUS
+              </p>
+              <p>
+                <img src="svgs/lunar2.svg" class="content_img"/>
+              </p>
+            </div>
+            <div class="content">
+              <p class="content_title">
+                EARTH
+              </p>
+              <p>
+                <img src="svgs/satellites.svg" class="content_img"/>
+              </p>
+            </div>
+          </div>
+          <div class="contents">
+            <div class="content">
+              <p class="content_title">
+                MARS
+              </p>
+              <p>
+                <img src="svgs/saturn11.svg" class="content_img"/>
+              </p>
+            </div>
+            <div class="content">
+              <p class="content_title">
+                JUPITER
+              </p>
+              <p>
+                <img src="svgs/solar_system.svg" class="content_img"/>
+              </p>
+            </div>
+            <div class="content">
+              <p class="content_title">
+                SATURN
+              </p>
+              <p>
+                <img src="svgs/star4.svg" class="content_img"/>
+              </p>
+            </div>
+          </div>
+          <div class="contents">
+            <div class="content">
+              <p class="content_title">
+                URANUS
+              </p>
+              <p>
+                <img src="svgs/stars4.svg" class="content_img"/>
+              </p>
+            </div>
+            <div class="content">
+              <p class="content_title">
+                NEPTUNE
+              </p>
+              <p>
+                <img src="svgs/sun36.svg" class="content_img"/>
+              </p>
+            </div>
+            <div class="content">
+              <p class="content_title">
+                PLUTO
+              </p>
+              <p>
+                <img src="svgs/saturn11.svg" class="content_img"/>
+              </p>
+            </div>
+          </div>
         </div>
       </div>
 
