--- a/html5/responsible/01/index.html
+++ b/html5/responsible/01/index.html
@@ -3,12 +3,12 @@
 <head>
   <title>cosmos</title>
   <meta charset="utf-8"/>
-  <link rel="stylesheet" href="normalize.css"/>
+  <link rel="stylesheet" href="css/normalize.css"/>
   <link href='http://fonts.googleapis.com/css?family=Play' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="style.css"/>
-  <link rel="stylesheet" media="screen and (max-width: 480px)" href="small.css" />
-  <link rel="stylesheet" media="screen and (max-width: 960px)" href="middle.css" />
+  <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" media="screen and (max-width: 480px)" href="css/small.css" />
+  <link rel="stylesheet" media="screen and (max-width: 960px)" href="css/middle.css" />
 </head>
 <body>
   <div id="base">
