Ver1.9.3 load json file and create views

--- a/html5/responsible/01/pictures.html
+++ b/html5/responsible/01/pictures.html
@@ -14,7 +14,28 @@
 </head>
 <body>
   <div id="base">
+    <div id="contents">
+      <div id="header">
+        <header class="mplus-1p-regular">COSMOS</header>
+      </div>
 
+      <div id="nav">
+        <nav>
+          <ul class="flex">
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">PICTURES</a></li>
+            <li><a href="#">MOVIES</a></li>
+            <li><a href="#">LINKS</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <div id="gallery">
+        <ul id="gallery_items" class="gallery_items">
+        </ul>
+      </div>
+    </div>
   </div>
 </body>
 </html>
