Ver1.9.4 Add load button function

--- a/html5/responsible/01/pictures.html
+++ b/html5/responsible/01/pictures.html
@@ -34,6 +34,12 @@
       <div id="gallery">
         <ul id="gallery_items" class="gallery_items">
         </ul>
+
+        <div class="title_button">
+          <div id="load_button" class="button_style">
+            <a href="#" class="button_style_big">さらに表示する</a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
