Ver1.9.4 Set scroll position function

--- a/html5/responsible/01/pictures.html
+++ b/html5/responsible/01/pictures.html
@@ -22,9 +22,9 @@
       <div id="nav">
         <nav>
           <ul class="flex">
-            <li><a href="#">HOME</a></li>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="#">ABOUT</a></li>
-            <li><a href="#">PICTURES</a></li>
+            <li><a href="pictures.html">PICTURES</a></li>
             <li><a href="#">MOVIES</a></li>
             <li><a href="#">LINKS</a></li>
           </ul>
