--- a/javascript/06/index.html
+++ b/javascript/06/index.html
@@ -13,14 +13,70 @@
 				<header><b>ABC</b> --personal--</header>
 			</div>
 
-			<div id="left">
-				<div class="menu_button"><a href="#">登録情報</a></div>
-				<div class="menu_button"><a href="#">利用明細</a></div>
-				<div class="menu_button"><a href="#">トップに戻る</a></div>
-			</div>
-
-			<div id="right">
+			<div id="main">
 				ようこそ<span class="top_username"></span>さん
+
+				<div id="user_info">
+					<h2>ユーザー情報</h2>
+					<table id="user_table" class="user_table">
+						<tr>
+							<td>名前</td>
+							<td><input type="text" value="" maxlength="10"></td>
+						</tr>
+						<tr>
+							<td>年齢</td>
+							<td><input type="text" value="" maxlength="3"></td>
+						</tr>
+						<tr>
+							<td>誕生日</td>
+							<td><input type="text" value="" maxlength="8"></td>
+						</tr>
+						<tr>
+							<td>性別</td>
+							<td>
+								<label><input type="radio" value="0" name="gender">男性</label>
+								<label><input type="radio" value="1" name="gender">女性</label>
+							</td>
+						</tr>
+						<tr>
+							<td>貯金額</td>
+							<td><input type="text" value="" maxlength="12">円</td>
+						</tr>
+						<tr>
+							<td>趣味</td>
+							<td>
+								<fieldset id="out">
+									<legend><input type="radio" name="in_out" value="0" checked=""> アウトドア</legend>
+									<label><input type="checkbox" value="0" class="h_chk">登山</label>
+									<label><input type="checkbox" value="0" class="h_chk">バーベキュー</label>
+									<label><input type="checkbox" value="0" class="h_chk">海水浴</label>
+									<label><input type="checkbox" value="0" class="h_chk">散歩</label>
+								</fieldset>
+								<fieldset id="in">
+									<legend><input type="radio" name="in_out" value="1">インドア</legend>
+									<label><input type="checkbox" value="0" class="h_chk">映画</label>
+									<label><input type="checkbox" value="0" class="h_chk">音楽</label>
+									<label><input type="checkbox" value="0" class="h_chk">睡眠</label>
+									<label><input type="checkbox" value="0" class="h_chk">茶道</label>
+								</fieldset>
+							</td>
+						</tr>
+					</table>
+					<button class="change_ui_button" type="submit" name="submit">情報を変更する</button>
+				</div>
+
+				<div id="change_list">
+					<h2>変更履歴</h2>
+					<table class="history_table">
+						<thead>
+							<tr>
+								<td class="h_td1">No</td>
+								<td class="h_td2">日時</td>
+								<td class="h_td3">変更内容</td>
+							</tr>
+						</thead>
+					</table>
+				</div>
 			</div>
 
 			<div class="clearfix"></div>
