Ver2.0.9 Add 03 files

--- a/html5/responsible/02/index.html
+++ b/html5/responsible/02/index.html
@@ -26,7 +26,11 @@
   </div>
 
   <div id="main">
+    <img src="svgs/heart13.svg" class="top_image"/>
 
+    <a href="#" class="details_link">
+      <span>詳しく見る</span>
+    </a>
   </div>
 
   <div id="footer">
