--- a/html5/responsible/03/index.html
+++ b/html5/responsible/03/index.html
@@ -7,8 +7,6 @@
   <link rel="stylesheet" href="css/style.css"/>
   <link rel="stylesheet" media="screen and (max-width: 480px)" href="css/small.css" />
   <link rel="stylesheet" media="screen and (max-width: 960px)" href="css/middle.css" />
-  <script src="js/jquery-2.1.4.js"></script>
-  <script src="js/main.js"></script>
 </head>
 <body>
   <div id="header">
@@ -27,9 +25,12 @@
     </nav>
   </div>
 
-  <div id="gallery">
-    <ul id="gallery_items" class="gallery_items">
-    </ul>
+  <div id="main">
+
+  </div>
+
+  <div id="footer">
+    <footer>Copyright &copy; 2015 ○○○ All Rights Reserved.</footer>
   </div>
 </body>
 </html>
