Ver2.1.0 Fix design

--- a/html5/responsible/01/pictures.html
+++ b/html5/responsible/01/pictures.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/style.css"/>
   <link rel="stylesheet" media="screen and (max-width: 480px)" href="css/small.css" />
   <link rel="stylesheet" media="screen and (max-width: 960px)" href="css/middle.css" />
+  <script src="js/modernizr.custom.min.js"></script>
   <script src="js/jquery-2.1.4.js"></script>
   <script src="js/main.js"></script>
 </head>
@@ -40,6 +41,10 @@
             <a href="#" class="button_style_big">さらに表示する</a>
           </div>
         </div>
+      </div>
+
+      <div id="scroll_button">
+        <a href="#" class="scroll_button"><img src="svgs/up112.svg" class="scroll_img"></a>
       </div>
     </div>
   </div>
