--- a/html5/responsible/02/pictures.html
+++ b/html5/responsible/02/pictures.html
@@ -30,6 +30,10 @@
   <div id="gallery">
     <ul id="gallery_items" class="gallery_items">
     </ul>
+
+    <a id="load_button" href="#" class="details_link">
+      <span>さらに表示する</span>
+    </a>
   </div>
 </body>
 </html>
