Ver2.1.2 Fix parallax

--- a/html5/responsible/01/about.html
+++ b/html5/responsible/01/about.html
@@ -33,9 +33,9 @@
       </div>
 
       <div id="main">
-        <div id="sq1"></div>
-        <div id="sq2"></div>
-        <div id="sq3"></div>
+        <div id="circle1"></div>
+        <div id="circle2"></div>
+        <div id="circle3"></div>
       </div>
 
       <div id="footer">
