--- a/javascript/perfect_javascript/constructor.html
+++ b/javascript/perfect_javascript/constructor.html
@@ -7,6 +7,12 @@
 	</head>
 	<body>
 		<script>
+			function Plus(){
+				this.x = 10;
+				this.y = 20;
+			}
+			var plus = new Plus();
+			p(plus.x);
 		</script>
 	</body>
 </html>
