--- a/javascript/perfect_javascript/null.html
+++ b/javascript/perfect_javascript/null.html
@@ -7,6 +7,17 @@
 	</head>
 	<body>
 		<script>
+			if(null == null){
+				p("null == null");
+			}else{
+				p("null != null");
+			}
+
+			if(null === null){
+				p("null === null");
+			}else{
+				p("null !== null");
+			}
 		</script>
 	</body>
 </html>
