--- a/javascript/perfect_javascript/value.html
+++ b/javascript/perfect_javascript/value.html
@@ -7,6 +7,12 @@
 	</head>
 	<body>
 		<script>
+			var s1 = "test";
+			var s2 = new String("test");
+			s1.x = "x1";
+			s2.x = "x2";
+			p(s1.x);
+			p(s2.x);
 		</script>
 	</body>
 </html>
