--- a/javascript/perfect_javascript/document_write.html
+++ b/javascript/perfect_javascript/document_write.html
@@ -3,11 +3,14 @@
 	<head>
 		<title>Base HTML</title>
 		<meta charset="utf-8"/>
-		<script src="_global.js"></script>
 	</head>
 	<body>
 		<script>
+			var dw = function(e){ document.write(e); }
+			dw("test");
 		</script>
+
+
 	</body>
 </html>
 
